# biobit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pixi.toml
.cargo/: config.toml
biobit/py/: Cargo.toml  pyproject.toml
biobit/py/src/: bindings.rs
biobit/py/src/bindings/: lib.rs
biobit/py/src/biobit/: __init__.py  collections  core  io
biobit/py/src/biobit/core/loc/: __init__.py  __init__.pyi  segment.pyi
biobit/py/src/biobit/deprecated/: __init__.py
biobit/py/src/biobit/deprecated/gindex/: __init__.py  genomic_index.py  overlap.py  test_index.py  test_overlap.py
biobit/py/src/biobit/io/bam/: __init__.pyi  reader.pyi
biobit/py/src/biobit/resources/repmasker/: test_repmasker.py
biobit/py/src/biobit/toolkit/: countit  reaper  reat  repeto  seqproj
biobit/py/src/biobit/toolkit/annotome/: __init__.py  annotome.py  assembly.py  core.py  gene.py  reference.py  rna.py  seqinfo.py
biobit/py/src/biobit/toolkit/countit/: __init__.py  adapters.py  countit.py  utils.py
biobit/py/src/biobit/toolkit/libnorm/: median_of_ratios.py  test_libnorm.py
biobit/py/src/biobit/toolkit/reaper/: result.pyi
biobit/py/src/biobit/toolkit/ripper/: __init__.py  __init__.pyi  config.pyi  result.pyi  ripper.pyi
biobit/py/src/biobit/toolkit/seqproj/: project.py
biobit/py/src/rust/: lib.rs
modules/alignment/rs/: Cargo.toml
modules/alignment/rs/src/: alignable.rs  lib.rs  mod.rs  score.rs
modules/alignment/rs/src/alignment/: mod.rs
modules/alignment/rs/src/pairwise/: mod.rs
modules/alignment/rs/src/pairwise/alignment/: alignment.rs  mod.rs  offset.rs  op.rs  step.rs  utils.rs
modules/alignment/rs/src/pairwise/scoring/: delegate.rs  equiv.rs  gaps.rs  mod.rs  symbols.rs
modules/alignment/rs/tests/: mod.rs
modules/alignment/rs/tests/alignment/: mod.rs
modules/alignment/rs/tests/alignment/pairwise/: local.rs
modules/alignment/rs/tests/pairwise/: local.rs
modules/collections/py/: Cargo.toml  pyproject.toml
modules/collections/py/src/bindings/: bundle.rs  lib.rs
modules/collections/py/src/bindings/interval_tree/: bits.rs  hits.rs  mod.rs  overlap.rs  segments.rs
modules/collections/py/src/collections/interval_tree/: bits.pyi
modules/collections/py/src/python/: __init__.py
modules/collections/py/src/python/interval_tree/: __init__.py  __init__.pyi  bits.pyi  forest.py  hits.pyi
modules/collections/rs/: Cargo.toml
modules/collections/rs/src/: bundle.rs  lib.rs
modules/collections/rs/src/genomic_index/: index.rs  mod.rs  overlap.rs
modules/collections/rs/src/interval_tree/: bits.rs  lapper_tree.rs  mod.rs  overlap.rs  test_stand.rs  traits.rs  tree.rs
modules/collections/rs/src/interval_tree/overlap/: elements.rs  mod.rs  steps.rs
modules/collections/rs/src/interval_tree/results/: hits.rs  mod.rs  segments.rs
modules/collections/rs/src/rle_vec/: identical.rs  merge.rs  merge2.rs  mod.rs  rle_vec.rs
modules/collections/rs/src/rxe_vec/: mod.rs  rle_vec.rs
modules/core/py/: Cargo.toml  pyproject.toml
modules/core/py/src/: lib.rs
modules/core/py/src/bindings/: fallible_py_runtime.rs  lib.rs  pickle.rs
modules/core/py/src/biobit_core_py/: __init__.py
modules/core/py/src/core/: __init__.py
modules/core/py/src/loc/: locus.rs  mod.rs  orientation.rs  per_orientation.rs  segment.rs  strand.rs
modules/core/py/src/ngs/: layout.rs  mates_orientation.rs  mod.rs  strandedness.rs
modules/core/py/src/rust/: lib.rs
modules/core/py/tests/: test_orientation.py  test_segment.py  test_seqlib.py  test_strand.py
modules/core/rs/: Cargo.toml  README.md
modules/core/rs/src/: lending_iterator.rs  lib.rs  num.rs  parallelism.rs  stash.rs
modules/core/rs/src/alignment/: alignable.rs  mod.rs
modules/core/rs/src/loc/: chain_interval.rs  contig.rs  interval.rs  locus.rs  mod.rs  orientation.rs  per_orientation.rs  per_strand.rs  segment.rs  strand.rs
modules/core/rs/src/ngs/: layout.rs  mates_orientation.rs  mod.rs  strandedness.rs
modules/core/rs/src/seqlib/: mates_orientation.rs  mod.rs  strandedness.rs
modules/core/rs/src/source/: core.rs  dyn_source.rs  mod.rs  source.rs
modules/core/rs/src/traits/: mod.rs  reads_counter.rs
modules/io/py/: Cargo.toml  pyproject.toml
modules/io/py/src/: lib.rs
modules/io/py/src/bam/: mod.rs  reader.rs
modules/io/py/src/bindings/: fasta.rs  lib.rs
modules/io/py/src/python/: __init__.py  protocols.py
modules/io/py/src/rust/: lib.rs
modules/io/rs/: Cargo.toml
modules/io/rs/src/: compression.rs  lib.rs  traits.rs
modules/io/rs/src/bam/: alignment_segments.rs  builder.rs  bundler.rs  indexed_reader.rs  mod.rs  query.rs  reader.rs  strdeductor.rs  traits.rs
modules/io/rs/src/bed/: mod.rs  reader.rs  record.rs  validate.rs  writer.rs
modules/io/rs/src/compression/: algorithm.rs  compression.rs  container.rs  decoder.rs  encoder.rs  mod.rs
modules/io/rs/src/data/: alignment_segments.rs  alignment_segments_source.rs  mod.rs  source.rs
modules/io/rs/src/fasta/: indexed_reader.rs  indexed_sources.rs  mod.rs  reader.rs  record.rs  validate.rs  writer.rs
modules/toolkit/countit/py/: Cargo.toml  pyproject.toml
modules/toolkit/countit/py/src/: countit.rs  lib.rs  result.rs
modules/toolkit/reaper/benches/: Cargo.toml
modules/toolkit/reaper/benches/src/: main.rs
modules/toolkit/reaper/py/: Cargo.toml
modules/toolkit/reaper/py/src/: lib.rs  reaper.rs  result.rs
modules/toolkit/reaper/rs/: Cargo.toml
modules/toolkit/reaper/rs/src/: engine.rs  lib.rs  reaper.rs  result.rs  worker.rs  workload.rs
modules/toolkit/reat/py/: Cargo.toml  README.md
modules/toolkit/reat/rs/: Cargo.toml
modules/toolkit/reat/rs/src/: builder.rs  dna.rs  engine.rs  lib.rs  reat.rs  result.rs  run.rs  task.rs  workload.rs
modules/toolkit/reat/rs/tests/: paths.rs  regress.rs  regression.rs
modules/toolkit/repeto/py/: Cargo.toml
modules/toolkit/repeto/py/src/: lib.rs
modules/toolkit/repeto/rs/: Cargo.toml
modules/toolkit/repeto/rs/src/: lib.rs
modules/toolkit/repeto/rs/tests/: integration_test.rs
modules/toolkit/seqproj/py/: Cargo.toml
modules/toolkit/seqproj/py/src/: layout.rs  lib.rs
(+524 files in other folders)
