[workspace]
members = [
    # Umbrella project for all modules
    "biobit/py",
    # Core modules
    "modules/core/rs",
    "modules/core/py",
    "modules/io/rs",
    "modules/io/py",
    "modules/alignment/rs",
    "modules/collections/rs",
    "modules/collections/py",
    # Toolkit
    "modules/toolkit/countit/*",
    "modules/toolkit/seqproj/*",
    "modules/toolkit/reaper/*",
    "modules/toolkit/repeto/*",
]
resolver = "2"

[workspace.package]
version = "0.0.8-rc1"
edition = "2021"
rust-version = "1.86.0"
authors = ["Aleksandr Fedorov"]
description = "Rust library for bioinformatics"
readme = "README.md"
documentation = "https://github.com/biomancy/biobit"
homepage = "https://github.com/biomancy/biobit"
repository = "https://github.com/biomancy/biobit"
license = "MIT"
categories = ["science", "algorithms"]

[workspace.dependencies]
derive-getters = "0.5.0"
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.14.0"
num = "0.4.3"
eyre = "0.6.12"
by_address = "1.2.1"
rayon = "1.10.0"
pyo3 = { version = "0.24.1", features = ["full"] }
noodles = { version = "0.96.0", features = ["bam", "sam", "core", "csi", "bgzf"] }
thread_local = "1.1.8"
higher-kinded-types = "0.2.0"
impl-tools = "0.10.3"
dyn-clone = "1.0.19"
flate2 = { version = "1.1.1", features = ["zlib-rs"], default-features = false }
dhat = "0.3.3"
ahash = "0.8.11"
anymap3 = "1.0.1"
rstar = "0.12.2"
log = "0.4.27"
bitcode = { version = "=0.6.6" }
memchr = "2.7.4"
infer = "0.19.0"
paste = "1.0.15"
