[workspace]
members = [
    # Umbrella project for all modules
    "biobit/py",
    ###################################################################
    # Core - fundamental primitives and data structures
    ###################################################################
    "modules/core/rs",
    "modules/core/py",
    "modules/io/rs",
    "modules/io/py",
    "modules/alignment/rs",
    "modules/collections/rs",
    "modules/collections/py",
    ###################################################################
    # Toolkit - modules addressing specific but very common tasks
    ###################################################################
    # CountIt
    "modules/toolkit/countit/py",
    "modules/toolkit/countit/rs",
    "modules/toolkit/countit/benches",
    # SeqProj
    "modules/toolkit/seqproj/*",
    # Reaper
    "modules/toolkit/reaper/*",
    # Repeto
    "modules/toolkit/repeto/*",
    # REAT - WIP
    # "modules/toolkit/reat/*",
]
resolver = "3"

[workspace.package]
version = "0.0.9-rc2"
edition = "2024"
rust-version = "1.90.0"
authors = ["Aleksandr Fedorov"]
description = "Rust library for bioinformatics"
readme = "README.md"
documentation = "https://github.com/biomancy/biobit"
homepage = "https://github.com/biomancy/biobit"
repository = "https://github.com/biomancy/biobit"
license = "MIT"
categories = ["science", "algorithms"]

[workspace.dependencies]
# Macros
derive-getters = "0.5.0"
derive_more = { version = "2.0.1", features = ["full"] }
paste = "1.0.15"
impl-tools = "0.11.4"
# Traits and type utilities
num = "0.4.3"
higher-kinded-types = "0.3.0-rc2"
dyn-clone = "1.0.20"
by_address = "1.2.1"
itertools = "0.14.0"
# Parallelism
rayon = "1.11.0"
thread_local = "1.1.9"
# Data structures
anymap3 = "1.0.1"
rstar = "0.12.2"
# Algorithms
memchr = "2.7.6"
ahash = "0.8.12"
# I/O
noodles = { version = "0.101.0", features = ["bam", "sam", "core", "csi", "bgzf"] }
flate2 = { version = "1.1.5", features = ["zlib-rs"], default-features = false }
# Logging and errors
eyre = "0.6.12"
log = "0.4.28"
# Serialization
bitcode = { version = "=0.6.7" }
serde = { version = "1.0.228", features = ["rc"] }
# Bindings
pyo3 = { version = "0.27.1", features = ["full"] }
#arrow = { version = "56.1.0", features = ["default", "ffi"] }
# Other
dhat = "0.3.3"
