[package]
name = "biobit-py"
readme = "README.md"
description = "Rust-powered Python library for biological data analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[lib]
path = "src/bindings/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
itertools = { workspace = true }
eyre = { workspace = true }
biobit-core-py = { path = "../../modules/core/py" }
biobit-io-py = { path = "../../modules/io/py" }
biobit-countit-py = { path = "../../modules/toolkit/countit/py" }
biobit-reaper-py = { path = "../../modules/toolkit/reaper/py" }
biobit-seqproj-py = { path = "../../modules/toolkit/seqproj/py" }
