[project]
name = "biobit"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description", "license", "authors", "readme", "urls"]
dependencies = [
    "attrs >= 23.2.0, < 24",
    "cattrs[pyyaml] >= 23.2.3, < 24",
    "pysam >= 0.21.0, < 1",
    "intervaltree >= 3.1.0, < 4",
    "pybedtools >= 0.9.1, < 1",
    "sortedcontainers >= 2.4.0, < 3",
    "pandas >= 2.0.0, < 3",
    "joblib >= 1.2.0, < 2",
]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
compatibility = "manylinux2014"
profile = "release"
python-source = "src"
module-name = "biobit._biobit"
exclude = [
    "**/tests",
]

[project.optional-dependencies]
dev = [
    "sortedcontainers-stubs >= 2.4.2, < 2.4.3",
    "pandas-stubs >= 2.1.4, < 2.1.5",
    "mypy >= 1.9.0, < 2.0.0",
    "pytest >= 8.1.1, < 8.1.2",
    "ruff >= 0.3.5, < 0.3.6"
]

[tool.mypy]
check_untyped_defs = true
allow_redefinition = true
exclude = ["test.*"]
