[project]
name = "biobit"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description", "license", "authors", "readme", "urls"]
dependencies = [
    "attrs == 25.1.0",
    "cattrs[pyyaml] == 24.1.2",
    "intervaltree == 3.1.0",
    "sortedcontainers == 2.4.0",
    "pandas == 2.2.3",
]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
compatibility = "manylinux2014"
profile = "release"
python-source = "src"
module-name = "biobit.rs"
exclude = [
    "**/tests",
]

[tool.mypy]
check_untyped_defs = true
allow_redefinition = true
exclude = ["test.*"]

[tool.pytest_env]
BIOBIT_RESOURCES = { value = "{PWD}/resources/", transform = true }
