[package]
name = "biobit-alignment-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "TODO"
documentation = "TODO"
readme = "README.md"
homepage = "TODO"
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
biobit-core-rs = { path = "../../core/rs" }
geo = { workspace = true }
eyre = { workspace = true }
