[project]
name = "biobit_collections_py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description", "license", "authors", "readme", "urls"]

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
compatibility = "manylinux2014"
profile = "release"
python-source = "src"
module-name = "biobit_collections_py._biobit_collections_py"
