[package]
name = "biobit-collections-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "TODO"
documentation = "TODO"
readme = "README.md"
homepage = "TODO"
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
biobit-core-rs = { path = "../../core/rs" }
derive_more = { workspace = true }
derive-getters = { workspace = true }
by_address = { workspace = true }
higher-kinded-types = { workspace = true }
ahash = { workspace = true }
rust-lapper = "1.1.0"
