[package]
name = "biobit-io-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "TODO"
documentation = "TODO"
readme = "README.md"
homepage = "TODO"
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
noodles = { workspace = true }
derive-getters = { workspace = true }
derive_more = { workspace = true }
higher-kinded-types = { workspace = true }
biobit-core-rs = { path = "../../core/rs" }
dyn-clone = { workspace = true }
eyre = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
infer = { workspace = true }
flate2 = { workspace = true }
impl-tools = { workspace = true }
bitcode = { workspace = true, optional = true }
paste = { workspace = true }
itertools = { workspace = true }

[features]
bitcode = ["dep:bitcode"]
