[package]
name = "biobit-reaper-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "TODO"
documentation = "TODO"
readme = "README.md"
homepage = "TODO"
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
biobit-core-rs = { path = "../../../core/rs" }
biobit-io-rs = { path = "../../../io/rs" }
biobit-collections-rs = { path = "../../../collections/rs" }
derive_more = { workspace = true }
derive-getters = { workspace = true }
rayon = { workspace = true }
by_address = { workspace = true }
thread_local = { workspace = true }
higher-kinded-types = { workspace = true }
eyre = { workspace = true }
dyn-clone = { workspace = true }
flate2 = { workspace = true }
ahash = { workspace = true }
anymap3 = { workspace = true }
itertools = { workspace = true }
