[package]
name = "biobit-reat-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
biobit-core-rs = { path = "../../../core/rs" }
biobit-io-rs = { path = "../../../io/rs" }
biobit-collections-rs = { path = "../../../collections/rs" }
bitcode = { workspace = true, optional = true }
eyre = { workspace = true }
itertools = { workspace = true }
derive-getters = { workspace = true }
derive_more = { workspace = true }
dyn-clone = { workspace = true }
thread_local = { workspace = true }
rayon = { workspace = true }
noodles = { workspace = true }
higher-kinded-types = { workspace = true }
bitvec = { workspace = true }
num = { workspace = true }

[dev-dependencies]
substratum-compress = { workspace = true }

[features]
bitcode = ["dep:bitcode", "biobit-core-rs/bitcode", "biobit-io-rs/bitcode", "biobit-collections-rs/bitcode"]
